--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
     <nav class="nav"><ul class="navbar">
         <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-        <li class="nav-item"><a href="#about" class="nav-link"><span>Summary</span></a></li>
+        <li class="nav-item"><a href="#summary" class="nav-link"><span>Summary</span></a></li>
         <li class="nav-item"><a href="#skills" class="nav-link"> Skills</a></li>
         <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
         <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
