fix: html validation

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div>©2022</div>
         <a href="https://github.com/pavelsudakov">pavelsudakov</a>
         <a class="footer-rsschool" href="https://rs.school/js/" target="_blank">
-            <img src="https://rs.school/images/rs_school_js.svg" width="60" height="30" alt="RS School"/>
+            <img src="https://rs.school/images/rs_school_js.svg" width="60" height="30" alt="RS School">
         </a>
 
 
