fix: Trailing whitespace issue

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">  
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300&display=swap" rel="stylesheet">
-
     <title>CV</title>
 </head>
 <body>
     <header class="header">
     <nav class="nav"><ul class="navbar">
         <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-        <li class="nav-item"><a href="#summary" class="nav-link"><span>Summary</span></a></li>
+        <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
         <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
         <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
         <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
@@ -48,7 +47,7 @@
             <li>Figma, Photoshop</li>
         </ul></div></div>
         <div class="container main-container container-border" id="code"><hr class="hr-large"><div class="container-text"><h2>Code</h2><code>function nicknameGenerator(name) { 
-            if (name.length > 3) { 
+            if (name.length &gt 3) { 
               return name[2].match(/[a, e, i, o, u]/g) ? name.slice(0, 4) : name.slice(0, 3)
                }
              else {
@@ -73,9 +72,6 @@
         <a class="footer-rsschool" href="https://rs.school/js/" target="_blank">
             <img src="https://rs.school/images/rs_school_js.svg" width="60" height="30" alt="RS School">
         </a>
-
-
     </footer>
-
 </body>
 </html>
