fix: Trailing whitespace issue

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li>Figma, Photoshop</li>
         </ul></div></div>
         <div class="container main-container container-border" id="code"><hr class="hr-large"><div class="container-text"><h2>Code</h2><code>function nicknameGenerator(name) { 
-            if (name.length &gt 3) { 
+            if (name.length &gt; 3) { 
               return name[2].match(/[a, e, i, o, u]/g) ? name.slice(0, 4) : name.slice(0, 3)
                }
              else {
